--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "autoprefixer": "^10.2.5",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.2.10",
+        "tailwindcss": "^2.1.1",
+        "vue-loader": "^15.9.6",
+        "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
         "laravel-echo": "^1.10.0",
-        "socket.io-client": "^2.3.0"
+        "socket.io-client": "^2.3.0",
+        "vue": "^2.6.12",
+        "vue-toastify": "^1.8.0"
     }
 }
